[project]
name = "aai-511-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "music21>=9.7.1",
    "notebook>=7.4.3",
    "numpy>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "pandas>=2.3.0",
    "pretty-midi>=0.2.10",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
]
