[project]
name = "aai-511-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "music21>=9.7.1",
    "notebook>=7.4.4",
    "optuna>=4.4.0",
    "plotly>=6.2.0",
    "pretty-midi>=0.2.10",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tensorflow-metal>=1.2.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
